[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://World/BackGround.png" type="Texture" id=2]
[ext_resource path="res://UI/Start.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[node name="Start" type="TextureRect"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 240.0
margin_top = 216.0
margin_right = 489.0
margin_bottom = 304.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.458824, 0.713726, 1 )
custom_colors/font_color_pressed = Color( 0.0196078, 0, 0.266667, 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutButton" type="Button" parent="."]
margin_left = 208.0
margin_top = 360.0
margin_right = 514.0
margin_bottom = 448.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.458824, 0.713726, 1 )
custom_colors/font_color_pressed = Color( 0.0196078, 0, 0.266667, 1 )
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 32.0
margin_right = 299.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 3 )
text = "Highest  Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutButton" type="Button" parent="."]
margin_left = 152.0
margin_top = 440.0
margin_right = 602.0
margin_bottom = 528.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.458824, 0.713726, 1 )
custom_colors/font_color_pressed = Color( 0.0196078, 0, 0.266667, 1 )
text = "How to play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoryButton" type="Button" parent="."]
margin_left = 240.0
margin_top = 288.0
margin_right = 489.0
margin_bottom = 376.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.458824, 0.713726, 1 )
custom_colors/font_color_pressed = Color( 0.0196078, 0, 0.266667, 1 )
text = "Story"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="AboutButton" to="." method="_on_AboutButton_pressed"]
[connection signal="pressed" from="TutButton" to="." method="_on_TutButton_pressed"]
[connection signal="pressed" from="StoryButton" to="." method="_on_StoryButton_pressed"]
